--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 window.location = "https://10.34.2.252:7777/KullaniciGiris.aspx";
             } else {
                 'girildi';
-                window.location = "https://mobil.clkbogazici.com.tr/KullaniciGiris.aspx";
+               if (url == "online.clkuludag.com.tr") { window.location = "https://mobil.clkuludag.com.tr/KullaniciGiris.aspx"; } else { window.location = "https://mobil.clkbogazici.com.tr/KullaniciGiris.aspx"; }
             }
 
     }
