--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         var currentLocation = window.location.pathname;
         var kontrol = '0'
     var url = window.location.hostname;
-
+debugger;
     if (viewwidth < 770 && currentLocation != "/KullaniciGiris.aspx" && kontrol != 'girildi') {
         if (url == 'localhost') {
             'girildi';
