--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
        
 
         a.navbar-brand {
-            background: transparent url(images/upesaslogo.png) no-repeat left center;
+            background: transparent url(/images/upesaslogo.png) no-repeat left center;
             padding-left: 156px;
         }
 
@@ -348,8 +348,8 @@ function __doPostBack(eventTarget, eventArgument) {
                         <li class="hidden-lg hidden-md hidden-sm"><a href="https://online.clkuludag.com.tr/Tahliye/GuvenceIadeBasvuru.aspx"><i class="fa fa-money"></i>&nbsp;Depozito İadesi İste</a> </li>
                         <li class="hidden-lg hidden-md hidden-sm"><a href="https://online.clkuludag.com.tr/BilgiGuncelleme/AboneBilgiGuncelleme.aspx"><i class="fa fa-pencil-square-o"></i>&nbsp;Bilgi Güncelle</a></li>
                         <li class="hidden-lg hidden-md hidden-sm"><a href="https://online.clkuludag.com.tr/OAKullaniciAbone/SerbestTuketiciIslemler.aspx"><i class="fa fa-try"></i>&nbsp;İndirimli Enerji Al</a></li>
-                        <li id="DigerIslemler1" class="hidden-lg hidden-md hidden-sm" style="display: list-item;"><a href="https://online.clkuludag.com.tr/#" onclick="$(&#39;#digerislemler&#39;).click();"><i class="fa fa-arrow-right"></i>&nbsp;Diğer İşlemler</a></li>
-                        <li id="YardimKonulari1" class="hidden-lg hidden-md hidden-sm" style="display: list-item;"><a href="https://online.clkuludag.com.tr/#" onclick="$(&#39;#yardimkonulari&#39;).click();"><i class="fa fa-info-circle"></i>&nbsp;Yardım Konuları</a></li>
+                        <li id="DigerIslemler1" class="hidden-lg hidden-md hidden-sm"><a href="https://online.clkuludag.com.tr/#" onclick="$(&#39;#digerislemler&#39;).click();"><i class="fa fa-arrow-right"></i>&nbsp;Diğer İşlemler</a></li>
+                        <li id="YardimKonulari1" class="hidden-lg hidden-md hidden-sm"><a href="https://online.clkuludag.com.tr/#" onclick="$(&#39;#yardimkonulari&#39;).click();"><i class="fa fa-info-circle"></i>&nbsp;Yardım Konuları</a></li>
                         <li id="liGiris"><a href="https://online.clkuludag.com.tr/KullaniciGiris.aspx"><i class="fa fa-sign-in"></i>&nbsp; Müşteri Girişi</a></li>
                         <li class="hidden-lg hidden-md hidden-sm"><a href="https://online.clkuludag.com.tr/OAKullaniciAbone/OAMusteriBilgiDegistirme.aspx"><i class="fa fa-cogs"></i>&nbsp;Hesap Ayarları</a> </li>
                         <li id="eyt"><a href="https://eyt.clkuludag.com.tr/YTSLogin.aspx" id="eytadres"><i class="fa fa-sign-in"></i>&nbsp; EYT Girişi</a></li>
@@ -438,7 +438,7 @@ function __doPostBack(eventTarget, eventArgument) {
     </div>
 
 
-    <div id="ContentPlaceHolder1_anasayfabutonlar" style="display: none;">
+    <div id="ContentPlaceHolder1_anasayfabutonlar">
         <div class="row" style="margin-top: -8px; padding: 10px;">
             <div class="col-md-3" style="padding: 3px 0 0 0;">
                 <a class="btn button" href="https://online.clkuludag.com.tr/OAKullaniciAbone/SerbestTuketiciIslemler.aspx"><i class="fa fa-try" style="color: #1DACFB;"></i>&nbsp;İndirimli Enerji Al</a>
@@ -487,7 +487,7 @@ function __doPostBack(eventTarget, eventArgument) {
                             <i style="color: #1DACFB;" class="fa fa-caret-right"></i>&nbsp;Avantajlı Tarife İşlemleri
                         </a>
                     </div>
-                    <div id="collapseThree" class="panel-collapse collapse in">
+                    <div id="collapseThree" class="panel-collapse collapse">
                         <div class="panel-body" style="padding: 0; font-weight: normal;">
                             <ul class="list-group" style="margin-bottom: 0;">
                                 <li class="list-group-item"><a href="https://online.clkuludag.com.tr/OAKullaniciAbone/SerbestTuketiciIslemler.aspx"><i class="fa fa-try"></i>&nbsp;İndirimli Enerji Al</a></li>
@@ -516,7 +516,7 @@ function __doPostBack(eventTarget, eventArgument) {
                         </div>
                     </a>
 
-                    <div id="collapseTwo" class="panel-collapse collapse in">
+                    <div id="collapseTwo" class="panel-collapse collapse">
                         <div class="panel-body" style="padding: 0; background-color: #fff; font-weight: normal;">
                             <ul class="list-group" style="margin-bottom: 0;">
                                 <li class="list-group-item"><a href="https://online.clkuludag.com.tr/Basvuru/Basvurularim.aspx"><i class="fa fa-user"></i>&nbsp;Başvuru Sorgula</a></li>
@@ -541,7 +541,7 @@ function __doPostBack(eventTarget, eventArgument) {
                         </div>
                     </a>
 
-                    <div id="collapseFour" class="panel-collapse collapse in">
+                    <div id="collapseFour" class="panel-collapse collapse">
                         <div class="panel-body" style="padding: 0; border: none !important; font-weight: normal;">
                             <ul class="list-group" style="margin-bottom: 0;">
                                 
