--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             window.location = "https://10.116.2.47:4040/KullaniciGiris.aspx";
                         } else {
                             'girildi';
-                            window.location = "https://online.limakuludag.com.tr/KullaniciGiris.aspx";
+                            window.location = "https://10.116.2.47:4040/KullaniciGiris.aspx";
                         }
                 }
 
