--- a/index.html
+++ b/index.html
@@ -1,78 +1,3 @@
-<!DOCTYPE html>
-
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head id="Head1"><title>
-	Online Abonelik İşlemleri
-</title><meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta charset="UTF-8">
-
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/jquery.ui.js"></script>
-    <script type="text/javascript" src="js/jquery.ui.position.js"></script>
-    <script type="text/javascript" src="js/jquery.plugins.js"></script>
-    <script type="text/javascript" src="js/jquery.ui.dropdownchecklist.js"></script>
-    <script type="text/javascript" src="js/jquery.ui.datepicker-tr.js"></script>
-    <script type="text/javascript" src="js/jquery.maskedInput.js"></script>
-    <script type="text/javascript" src="js/jquery.password.strength.js"></script>
-    <script type="text/javascript" src="js/jquery.scroller.js"></script>
-    <script type="text/javascript" src="js/jquery.nicescroll.js"></script>
-    <script type="text/javascript" src="js/badger.js"></script>
-    <script type="text/javascript" src="js/superfish.js"></script>
-    <script type="text/javascript" src="js/base.js"></script>
-    <script type="text/javascript" src="js/teleriktreeview.js"></script>
-    <!--script type="text/javascript" src="/js/ZeroClipboard.js"></!--script -->
-    <script type="text/javascript" src="js/stacktable.js"></script>
-    <script type="text/javascript" src="js/slideout.min.js"></script>
-
-
-
-
-    <script type="text/javascript" charset="utf-8">
-    document.addEventListener("deviceready", onDeviceReady, false);
-    function onDeviceReady() {
-      navigator.splashscreen.show();
-    }
-    </script>
-
-    <script type="text/javascript">
-        $(function () {
-            $(".row").click(function () {
-
-                if ($('#menuayar').val() == 1) {
-                    $("#acilirmenu").removeClass("in");
-                    $('#menuayar').val('0');
-                }
-            });
-
-            $("#menuayarbutton").click(function () {
-
-                if ($('#menuayar').val() == 0) {
-                    $('#menuayar').val('1');
-                } else {
-                    $('#menuayar').val('0');
-                }
-            });
-
-
-
-
-            $('table.stack-table').stacktable();
-            $('#table.stack-table').stacktable({ myClass: 'small-only' });
-
-            $(".solMenu").each(function () {
-                var href = $(this).attr("href");
-                if (href == window.location.pathname) {
-                    $(this).addClass("active");
-                }
-            });
-        });
-
-    </script>
-
-
-
-
-</body>
-</html>
-<meta http-equiv='refresh' content='1800;url=/Default.aspx'>
+<script>
+location.href = "http://10.116.2.47:4040/";
+</script>
