--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <script>
-location.href = "https://online.limakuludag.com.tr/";
+//location.href = "https://online.limakuludag.com.tr/";
 </script>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/owsfdh4gxyc" frameborder="0" allowfullscreen></iframe>
