--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <script>
 //location.href = "https://online.limakuludag.com.tr/";
+  window.location = "https://online.limakuludag.com.tr/";
 </script>
 
-<iframe width="560" height="315" src="https://online.limakuludag.com.tr/" frameborder="0" allowfullscreen></iframe>
+
