--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script>
-//location.href = "https://online.limakuludag.com.tr/";
-  window.location = "https://online.limakuludag.com.tr/";
+location.href = "https://online.limakuludag.com.tr/";
+  //window.location = "https://online.limakuludag.com.tr/";
 </script>
 
 
