--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script>
-location.href = "https://online.limakuludag.com.tr/";
+location.href = "http://10.116.2.47:4040/";
   //window.location = "https://online.limakuludag.com.tr/";
 </script>
 
